Added the import/explore title

--- a/Candy.ipynb
+++ b/Candy.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import and explore data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -21,51 +28,6 @@
    "source": [
     "candy = pd.read_csv('candy-data.csv')\n",
     "candy['competitorname'] = candy['competitorname'].replace(\"Õ\", \"'\", regex=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     chocolate\n",
-       "1     chocolate\n",
-       "2          None\n",
-       "3          None\n",
-       "4        fruity\n",
-       "        ...    \n",
-       "80       fruity\n",
-       "81       fruity\n",
-       "82       fruity\n",
-       "83      caramel\n",
-       "84    chocolate\n",
-       "Length: 85, dtype: object"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def get_candy(row):\n",
-    "    for c in candy.columns:\n",
-    "        if row[c]==1:\n",
-    "            return c\n",
-    "\n",
-    "candy.apply(get_candy, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "candy['types'] = candy.apply(get_candy, axis=1)"
    ]
   },
   {
@@ -747,6 +709,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     chocolate\n",
+       "1     chocolate\n",
+       "2          None\n",
+       "3          None\n",
+       "4        fruity\n",
+       "        ...    \n",
+       "80       fruity\n",
+       "81       fruity\n",
+       "82       fruity\n",
+       "83      caramel\n",
+       "84    chocolate\n",
+       "Length: 85, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_candy(row):\n",
+    "    for c in candy.columns:\n",
+    "        if row[c]==1:\n",
+    "            return c\n",
+    "\n",
+    "candy.apply(get_candy, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "candy['types'] = candy.apply(get_candy, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -817,9 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
